# g2p-rag

./: .env.example  .gitignore  Makefile  README.md  STABILITY.md  pyproject.toml
cookbook/: _citation.py  _llm.py  bmpr2_sotatercept_ligand_trap.py  braf_idh1_hotspot_comparison.py  brca1_domain_variants.py  cyp21a2_crhr1_upstream_target.py  orphanet_omim_eligibility_matcher.py  pcsk9_druggability_heatmap.py  pdb_alphafold_variant_coverage_map.py  piga_pnh_complement_drugs.py  rare_variant_druggability_leaderboard.py  vus_pathogenicity_cluster_context.py
data/snapshots/: .manifest.json
docs/: INTEGRATION.md
notebooks/: 01_eval.ipynb
scripts/: _reingest_47.py
src/g2p_rag/: __init__.py  chunk.py  cli.py  embed.py  fetch.py  generate.py  retrieve.py
src/g2p_rag/integrations/: __init__.py  langchain.py  llamaindex.py
tests/: conftest.py  eval_baseline.json  eval_qa.json  test_api.py  test_chunk.py  test_eval.py  test_fetch.py  test_retrieve.py
tests/internal/: test_chunk.py  test_fetch.py
