[project]
name = "g2p-rag"
version = "0.1.0"
description = "Retrieval-Augmented Generation over the Broad Institute G2P portal"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Amit Shenoy", email = "shenoy.am@husky.neu.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28.0",
    "chromadb>=0.5.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.2.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "tenacity>=8.3.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "diskcache>=5.6.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.9.0",
    "openai>=1.30.0",
]

[project.scripts]
g2p-rag = "g2p_rag.cli:app"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
