[project]
name = "g2p-rag"
version = "0.1.2"
description = "Retrieval-Augmented Generation over the Broad Institute G2P portal"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Amit Shenoy", email = "shenoy.am@husky.neu.edu" }
]
requires-python = ">=3.11"
keywords = ["genomics", "RAG", "retrieval-augmented-generation", "proteins", "bioinformatics", "LLM"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # Versions are pinned (==) to the versions resolved in uv.lock so that a
    # fresh `pip install g2p-rag` reproduces the same dependency graph used to
    # build the indexed snapshot and run benchmarks. Bumping any of these is a
    # breaking change to the index (see CHANGELOG and STABILITY.md) — re-run
    # the ingest + commit the new uv.lock + bump CHUNK_INDEX_VERSION.
    "anthropic==0.104.1",
    "chromadb==1.5.9",
    "langchain==1.3.1",
    "langchain-anthropic==1.4.3",
    "langchain-community==0.4.2",
    "langchain-core==1.4.0",
    "rank-bm25==0.2.2",
    "sentence-transformers==5.5.1",
    "tenacity==9.1.4",
    "typer==0.25.1",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "diskcache==5.6.3",
    "structlog==25.5.0",
    "rich==15.0.0",
    "numpy==2.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.9.0",
    "openai>=1.30.0",
]
langchain = [
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
]
llamaindex = [
    "llama-index-core>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/amitshenoy/g2p-rag"
Documentation = "https://github.com/amitshenoy/g2p-rag/blob/main/docs/INTEGRATION.md"
"Bug Tracker" = "https://github.com/amitshenoy/g2p-rag/issues"
"Source Code" = "https://github.com/amitshenoy/g2p-rag"

[project.scripts]
g2p-rag = "g2p_rag.cli:app"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Eval tests are opt-in: they need the full chroma index and load the
# sentence-transformers model. Run them with `pytest -m eval`.
addopts = "-m 'not eval'"
markers = [
    "eval: Run evaluation tests (slow, needs chroma index)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
